fix(catalog): make search find what is in stock, and open All products on laptops
Search
Typing "macbook" on a shop with four MacBooks in stock returned nothing, and "laptop" found
1 of 28. Four faults, all in one query:
- No size, so Elasticsearch returned its default 10 hits; the caller then dropped the ones that
  were inactive or not sold in the shopper's country — after the cut. Now asks for 100.
- No status filter, so inactive and draft documents took those slots. Now filtered in the query.
- Fuzziness cannot match a prefix: "mac" is four edits from "macbook", and AUTO allows none at
  three characters. Now matches the start of words too (translations.title^4, phrase_prefix), so
  "mac" finds MacBook and "thinkp" finds ThinkPad, with fuzziness still covering typos.
- A stale index hid live products. The database's own title/SKU match is merged in after the
  index's ranking, so a product added, renamed or re-activated since it was last indexed is still
  found. An empty query now asks Elasticsearch nothing at all.

Catalogue order
"All products" opened on whatever the catalogue listed first — accessories, on a laptop shop.
The default order now leads with the primary category and its sub-categories, keeping every
product and the order within each group, applied before paging so it holds as the shopper
scrolls, and only when they have not chosen a sort of their own. The category is matched by its
English name rather than a pasted id, so a rebuilt tree cannot silently disable it, and it is
configurable: CATALOG_FIRST_CATEGORY (default "Laptop"), wired through the properties, compose
and the deploy workflow.

Tests: CatalogOrderAndSearchMergeTest (6), ProductSearchQueryTest (5).

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>